Modify WebServiceAccountSelectionPage, Implement New

--- a/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.WebService"
         mc:Ignorable="d"
-        Title="Web Service Account Edit" Height="450" Width="900" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="12">
+        Title="Web Service Account Edit" SizeToContent="Height" Width="900" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="12">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -30,84 +30,85 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="5" FontWeight="Bold" Text="WebServiceAccountId:" />
-        <TextBox Grid.Column="1" Grid.Row="0" Margin="5" Text="{Binding Path=WebServiceAccount.WebServiceAccountId}" />
+        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" FontWeight="Bold" Text="WebServiceAccountId:" />
+        <TextBox Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=WebServiceAccount.WebServiceAccountId}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="5" FontWeight="Bold" Text="UserName:" />
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="5" Text="{Binding Path=WebServiceAccount.UserName}" />
+        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontWeight="Bold" Text="UserName:" />
+        <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=WebServiceAccount.UserName}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="2" Margin="5" FontWeight="Bold" Text="Password:" />
-        <TextBox Grid.Column="1" Grid.Row="2" Margin="5" Text="{Binding Path=WebServiceAccount.Password}" />
+        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" FontWeight="Bold" Text="Password:" />
+        <TextBox Grid.Column="1" Grid.Row="2" Margin="2" Text="{Binding Path=WebServiceAccount.Password}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="3" Margin="5" FontWeight="Bold" Text="DisplayName:" />
-        <TextBox Grid.Column="1" Grid.Row="3" Margin="5" Text="{Binding Path=WebServiceAccount.DisplayName}" />
+        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" FontWeight="Bold" Text="DisplayName:" />
+        <TextBox Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Path=WebServiceAccount.DisplayName}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Margin="5" FontWeight="Bold" Text="PrimaryClientId:" />
-        <TextBox Grid.Column="1" Grid.Row="4" Margin="5" Text="{Binding Path=WebServiceAccount.PrimaryClientId}" />
+        <TextBlock Grid.Column="0" Grid.Row="4" Margin="2" FontWeight="Bold" Text="PrimaryClientId:" />
+        <TextBox Grid.Column="1" Grid.Row="4" Margin="2" Text="{Binding Path=WebServiceAccount.PrimaryClientId}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Margin="5" FontWeight="Bold" Text="DownloadFileType:" />
-        <TextBox Grid.Column="1" Grid.Row="5" Margin="5" Text="{Binding Path=WebServiceAccount.DownloadFileType}" />
+        <TextBlock Grid.Column="0" Grid.Row="5" Margin="2" FontWeight="Bold" Text="DownloadFileType:" />
+        <ComboBox Grid.Column="1" Grid.Row="5" Margin="2" ItemsSource="{Binding Path=DownloadFileTypes}" SelectedValue="{Binding Path=WebServiceAccount.DownloadFileType}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="6" Margin="5" FontWeight="Bold" Text="InitialPage:" />
-        <TextBox Grid.Column="1" Grid.Row="6" Margin="5" Text="{Binding Path=WebServiceAccount.InitialPage}" />
+        <TextBlock Grid.Column="0" Grid.Row="6" Margin="2" FontWeight="Bold" Text="InitialPage:" />
+        <ComboBox Grid.Column="1" Grid.Row="6" Margin="2" ItemsSource="{Binding Path=InitialPages}"
+                  SelectedValue="{Binding Path=WebServiceAccount.InitialPage}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="7" Margin="5" FontWeight="Bold" Text="ApplicationTimeoutMinutes:" />
-        <TextBox Grid.Column="1" Grid.Row="7" Margin="5" Text="{Binding Path=WebServiceAccount.ApplicationTimeoutMinutes}" />
+        <TextBlock Grid.Column="0" Grid.Row="7" Margin="2" FontWeight="Bold" Text="ApplicationTimeoutMinutes:" />
+        <TextBox Grid.Column="1" Grid.Row="7" Margin="2" Text="{Binding Path=WebServiceAccount.ApplicationTimeoutMinutes}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="8" Margin="5" FontWeight="Bold" Text="RemoteFileDownloadDirectory:" />
-        <TextBox Grid.Column="1" Grid.Row="8" Margin="5" Text="{Binding Path=WebServiceAccount.RemoteFileDownloadDirectory}" />
+        <TextBlock Grid.Column="0" Grid.Row="8" Margin="2" FontWeight="Bold" Text="RemoteFileDownloadDirectory:" />
+        <TextBox Grid.Column="1" Grid.Row="8" Margin="2" Text="{Binding Path=WebServiceAccount.RemoteFileDownloadDirectory}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="9" Margin="5" FontWeight="Bold" Text="RemoteFileUploadDirectory:" />
-        <TextBox Grid.Column="1" Grid.Row="9" Margin="5" Text="{Binding Path=WebServiceAccount.RemoteFileUploadDirectory}" />
+        <TextBlock Grid.Column="0" Grid.Row="9" Margin="2" FontWeight="Bold" Text="RemoteFileUploadDirectory:" />
+        <TextBox Grid.Column="1" Grid.Row="9" Margin="2" Text="{Binding Path=WebServiceAccount.RemoteFileUploadDirectory}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="10" Margin="5" FontWeight="Bold" Text="AlertEmailAddress:" />
-        <TextBox Grid.Column="1" Grid.Row="10" Margin="5" Text="{Binding Path=WebServiceAccount.AlertEmailAddress}" />
+        <TextBlock Grid.Column="0" Grid.Row="10" Margin="2" FontWeight="Bold" Text="AlertEmailAddress:" />
+        <TextBox Grid.Column="1" Grid.Row="10" Margin="2" Text="{Binding Path=WebServiceAccount.AlertEmailAddress}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="11" Margin="5" FontWeight="Bold" Text="SaveUserNameLocal:" />
-        <CheckBox Grid.Column="1" Grid.Row="11" Margin="5" IsChecked="{Binding Path=WebServiceAccount.SaveUserNameLocal}" />
+        <TextBlock Grid.Column="0" Grid.Row="11" Margin="2" FontWeight="Bold" Text="SaveUserNameLocal:" />
+        <CheckBox Grid.Column="1" Grid.Row="11" Margin="2" IsChecked="{Binding Path=WebServiceAccount.SaveUserNameLocal}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="12" Margin="5" FontWeight="Bold" Text="SavePasswordLocal:" />
-        <CheckBox Grid.Column="1" Grid.Row="12" Margin="5" IsChecked="{Binding Path=WebServiceAccount.SavePasswordLocal}" />
+        <TextBlock Grid.Column="0" Grid.Row="12" Margin="2" FontWeight="Bold" Text="SavePasswordLocal:" />
+        <CheckBox Grid.Column="1" Grid.Row="12" Margin="2" IsChecked="{Binding Path=WebServiceAccount.SavePasswordLocal}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="0" Margin="5" FontWeight="Bold" Text="EnableApplicationTimeout:" />
-        <CheckBox Grid.Column="3" Grid.Row="0" Margin="5" IsChecked="{Binding Path=WebServiceAccount.EnableApplicationTimeout}" />
+        <TextBlock Grid.Column="2" Grid.Row="0" Margin="2" FontWeight="Bold" Text="EnableApplicationTimeout:" />
+        <CheckBox Grid.Column="3" Grid.Row="0" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableApplicationTimeout}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="1" Margin="5" FontWeight="Bold" Text="EnableSaveSettings:" />
-        <CheckBox Grid.Column="3" Grid.Row="1" Margin="5" IsChecked="{Binding Path=WebServiceAccount.EnableSaveSettings}" />
+        <TextBlock Grid.Column="2" Grid.Row="1" Margin="2" FontWeight="Bold" Text="EnableSaveSettings:" />
+        <CheckBox Grid.Column="3" Grid.Row="1" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableSaveSettings}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="2" Margin="5" FontWeight="Bold" Text="EnableFileUpload:" />
-        <CheckBox Grid.Column="3" Grid.Row="2" Margin="5" IsChecked="{Binding Path=WebServiceAccount.EnableFileUpload}" />
+        <TextBlock Grid.Column="2" Grid.Row="2" Margin="2" FontWeight="Bold" Text="EnableFileUpload:" />
+        <CheckBox Grid.Column="3" Grid.Row="2" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableFileUpload}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="3" Margin="5" FontWeight="Bold" Text="EnableFileDownload:" />
-        <CheckBox Grid.Column="3" Grid.Row="3" Margin="5" IsChecked="{Binding Path=WebServiceAccount.EnableFileDownload}" />
+        <TextBlock Grid.Column="2" Grid.Row="3" Margin="2" FontWeight="Bold" Text="EnableFileDownload:" />
+        <CheckBox Grid.Column="3" Grid.Row="3" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableFileDownload}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="4" Margin="5" FontWeight="Bold" Text="EnableOrderEntry:" />
-        <CheckBox Grid.Column="3" Grid.Row="4" Margin="5" IsChecked="{Binding Path=WebServiceAccount.EnableOrderEntry}" />
+        <TextBlock Grid.Column="2" Grid.Row="4" Margin="2" FontWeight="Bold" Text="EnableOrderEntry:" />
+        <CheckBox Grid.Column="3" Grid.Row="4" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableOrderEntry}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="5" Margin="5" FontWeight="Bold" Text="EnableReportBrowser:" />
-        <CheckBox Grid.Column="3" Grid.Row="5" Margin="5" IsChecked="{Binding Path=WebServiceAccount.EnableReportBrowser}" />
+        <TextBlock Grid.Column="2" Grid.Row="5" Margin="2" FontWeight="Bold" Text="EnableReportBrowser:" />
+        <CheckBox Grid.Column="3" Grid.Row="5" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableReportBrowser}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="6" Margin="5" FontWeight="Bold" Text="EnableBillingBrowser:" />
-        <CheckBox Grid.Column="3" Grid.Row="6" Margin="5" IsChecked="{Binding Path=WebServiceAccount.EnableBillingBrowser}" />
+        <TextBlock Grid.Column="2" Grid.Row="6" Margin="2" FontWeight="Bold" Text="EnableBillingBrowser:" />
+        <CheckBox Grid.Column="3" Grid.Row="6" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableBillingBrowser}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="7" Margin="5" FontWeight="Bold" Text="EnableEmailAlert:" />
-        <CheckBox Grid.Column="3" Grid.Row="7" Margin="5" IsChecked="{Binding Path=WebServiceAccount.EnableEmailAlert}" />
+        <TextBlock Grid.Column="2" Grid.Row="7" Margin="2" FontWeight="Bold" Text="EnableEmailAlert:" />
+        <CheckBox Grid.Column="3" Grid.Row="7" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableEmailAlert}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="8" Margin="5" FontWeight="Bold" Text="VersionCurrentlyUsing:" />
-        <TextBox Grid.Column="3" Grid.Row="8" Margin="5" Text="{Binding Path=WebServiceAccount.VersionCurrentlyUsing}" />
+        <TextBlock Grid.Column="2" Grid.Row="8" Margin="2" FontWeight="Bold" Text="VersionCurrentlyUsing:" />
+        <TextBox Grid.Column="3" Grid.Row="8" Margin="2" Text="{Binding Path=WebServiceAccount.VersionCurrentlyUsing}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="9" Margin="5" FontWeight="Bold" Text="SystemUserId:" />
-        <TextBox Grid.Column="3" Grid.Row="9" Margin="5" Text="{Binding Path=WebServiceAccount.SystemUserId}" />
+        <TextBlock Grid.Column="2" Grid.Row="9" Margin="2" FontWeight="Bold" Text="SystemUserId:" />
+        <TextBox Grid.Column="3" Grid.Row="9" Margin="2" Text="{Binding Path=WebServiceAccount.SystemUserId}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="10" Margin="5" FontWeight="Bold" Text="Signature:" />
-        <TextBox Grid.Column="3" Grid.Row="10" Margin="5" Text="{Binding Path=WebServiceAccount.Signature}" />
+        <TextBlock Grid.Column="2" Grid.Row="10" Margin="2" FontWeight="Bold" Text="Signature:" />
+        <TextBox Grid.Column="3" Grid.Row="10" Margin="2" Text="{Binding Path=WebServiceAccount.Signature}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="11" Margin="5" FontWeight="Bold" Text="FacilityId:" />
-        <TextBox Grid.Column="3" Grid.Row="11" Margin="5" Text="{Binding Path=WebServiceAccount.FacilityId}" />
+        <TextBlock Grid.Column="2" Grid.Row="11" Margin="2" FontWeight="Bold" Text="FacilityId:" />
+        <TextBox Grid.Column="3" Grid.Row="11" Margin="2" Text="{Binding Path=WebServiceAccount.FacilityId}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="12" Margin="5" FontWeight="Bold" Text="ObjectId:" />
-        <TextBox Grid.Column="3" Grid.Row="12" Margin="5" Text="{Binding Path=WebServiceAccount.ObjectId}" />
+        <TextBlock Grid.Column="2" Grid.Row="12" Margin="2" FontWeight="Bold" Text="ObjectId:" />
+        <TextBox Grid.Column="3" Grid.Row="12" Margin="2" Text="{Binding Path=WebServiceAccount.ObjectId}" />
 
-        <Button Name="ButtonOK" Grid.Column="3" Grid.Row="13" Height="30" Width="80" Click="ButtonOK_Click">OK</Button>
+        <Button Name="ButtonOK" Grid.Column="3" Grid.Row="13" Margin="2" Height="30" Width="80" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
     </Grid>
 </Window>
