--- a/YellowstonePathology/UI/WebService/WebServiceAccountSelectionDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountSelectionDialog.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.WebService"
+        xmlns:LocalUI="clr-namespace:YellowstonePathology.UI"
         mc:Ignorable="d"
-        Title="Web Service Account Selection" Height="500" Width="300" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14">
+        Title="Web Service Account Selection" Height="600" Width="700" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -13,33 +14,24 @@
         </Grid.ColumnDefinitions>
         
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="5" FontWeight="Bold" Text="Client Name:" />
-        <ComboBox Name="ComboBoxClientName" Grid.Column="1" Grid.Row="0" Margin="5" HorizontalAlignment="Stretch" ItemsSource="{Binding Path=WebServiceClientViewList}" 
-                  SelectedValuePath="ClientId" DisplayMemberPath="ClientName" SelectionChanged="ComboBoxClientName_SelectionChanged" />
-
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="5" FontWeight="Bold" Text="OR" />
-
-        <TextBlock Grid.Column="0" Grid.Row="2" Margin="5" FontWeight="Bold" Text="User Name:" />
-        <TextBox Name="TextBoxDisplayName" Grid.Column="1" Grid.Row="2" Margin="5" HorizontalAlignment="Stretch" TextChanged="TextBoxDisplayName_TextChanged" />
-
-        <ListView Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="2" Margin="5" Name="ListViewWebServiceAccounts"
-				  ItemsSource="{Binding Path=WebServiceAccountCollection}" MouseDoubleClick="ListViewWebServiceAccounts_MouseDoubleClick">
+        <ListView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="2" Name="ListViewWebServiceAccounts" LocalUI:ListViewSorter.IsSortable="true"
+				  ItemsSource="{Binding Path=WebServiceAccountViewList}" MouseDoubleClick="ListViewWebServiceAccounts_MouseDoubleClick">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=DisplayName}" Width="200" Header="Account Display Name"></GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=DisplayName}" Width="200" Header="Name" LocalUI:ListViewSorter.SortPropertyName="DisplayName" />
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=ClientName}" Width="300" Header="Client" LocalUI:ListViewSorter.SortPropertyName="ClientName" />
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=InitialPage}" Width="150" Header="Initial Page" LocalUI:ListViewSorter.SortPropertyName="InitialPage" />
                 </GridView>
             </ListView.View>
         </ListView>
 
-        <Button Name="ButtonNew" Grid.Column="0" Grid.Row="4" Height="30" Width="80" Margin="5" HorizontalAlignment="Left" Click="ButtonNew_Click">New</Button>
-        <Button Name="ButtonOK" Grid.Column="1" Grid.Row="4" Height="30" Width="80" Margin="5" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
+        <Button Name="ButtonNew" Grid.Column="0" Grid.Row="2" Height="30" Width="80" Margin="2" HorizontalAlignment="Left" Click="ButtonNew_Click">New</Button>
+        <Button Name="ButtonUpdate" Grid.Column="1" Grid.Row="2" Height="30" Width="80" Margin="2" HorizontalAlignment="Left" Click="ButtonUpdate_Click">Update MS</Button>
+        <Button Name="ButtonOK" Grid.Column="1" Grid.Row="2" Height="30" Width="80" Margin="2" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
 
     </Grid>
 </Window>
