--- a/YellowstonePathology/UI/MainWindow.xaml
+++ b/YellowstonePathology/UI/MainWindow.xaml
@@ -87,6 +87,7 @@
                     <MenuItem Name="MenuItemUserPreferences" Header="User Preferences" Click="MenuItemUserPreferences_Click"></MenuItem>
                     <MenuItem Name="MenuItemSystemUser" Header="System User" Click="MenuItemSystemUser_Click"></MenuItem>
                     <MenuItem Name="MenuItemWebServiceAccounts" Header="Web Service Accounts" Click="MenuItemWebServiceAccounts_Click"></MenuItem>
+                    <MenuItem Name="MenuItemTest" Header="Testing" Click="MenuItemTest_Click"></MenuItem>
                 </MenuItem>
 
                 <MenuItem Header="_Monitor" Name="MenuItemMonitor">
