Add WebServiceAccountClient to edit dialog

--- a/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
+++ b/YellowstonePathology/UI/WebService/WebServiceAccountEditDialog.xaml
@@ -5,110 +5,175 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.WebService"
         mc:Ignorable="d"
-        Title="Web Service Account Edit" SizeToContent="Height" Width="900" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="12">
+        Title="Web Service Account Edit" Height="380"  Width="500" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="12">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" FontWeight="Bold" Text="WebServiceAccountId:" />
-        <TextBox Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=WebServiceAccount.WebServiceAccountId}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontWeight="Bold" Text="UserName:" />
-        <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=WebServiceAccount.UserName}" />
+        <TabControl Grid.Column="0" Grid.Row="0" Margin="2">
+            <TabItem Header="Web Service Account (Pg 1)">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" FontWeight="Bold" Text="Password:" />
-        <TextBox Grid.Column="1" Grid.Row="2" Margin="2" Text="{Binding Path=WebServiceAccount.Password}" />
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" FontWeight="Bold" Text="DisplayName:" />
-        <TextBox Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Path=WebServiceAccount.DisplayName}" />
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Web Service Account Id:" />
+                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=WebServiceAccount.WebServiceAccountId}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="4" Margin="2" FontWeight="Bold" Text="PrimaryClientId:" />
-        <TextBox Grid.Column="1" Grid.Row="4" Margin="2" Text="{Binding Path=WebServiceAccount.PrimaryClientId}" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="User Name:" />
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=WebServiceAccount.UserName}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="5" Margin="2" FontWeight="Bold" Text="DownloadFileType:" />
-        <ComboBox Grid.Column="1" Grid.Row="5" Margin="2" ItemsSource="{Binding Path=DownloadFileTypes}" SelectedValue="{Binding Path=WebServiceAccount.DownloadFileType}" />
+                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Password:" />
+                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" Text="{Binding Path=WebServiceAccount.Password}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="6" Margin="2" FontWeight="Bold" Text="InitialPage:" />
-        <ComboBox Grid.Column="1" Grid.Row="6" Margin="2" ItemsSource="{Binding Path=InitialPages}"
-                  SelectedValue="{Binding Path=WebServiceAccount.InitialPage}" />
+                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Display Name:" />
+                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Path=WebServiceAccount.DisplayName}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="7" Margin="2" FontWeight="Bold" Text="ApplicationTimeoutMinutes:" />
-        <TextBox Grid.Column="1" Grid.Row="7" Margin="2" Text="{Binding Path=WebServiceAccount.ApplicationTimeoutMinutes}" />
+                    <TextBlock Grid.Column="0" Grid.Row="4" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Primary Client Id:" />
+                    <TextBox Grid.Column="1" Grid.Row="4" Margin="2" Text="{Binding Path=WebServiceAccount.PrimaryClientId}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="8" Margin="2" FontWeight="Bold" Text="RemoteFileDownloadDirectory:" />
-        <TextBox Grid.Column="1" Grid.Row="8" Margin="2" Text="{Binding Path=WebServiceAccount.RemoteFileDownloadDirectory}" />
+                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Download File Type:" />
+                    <ComboBox Grid.Column="1" Grid.Row="5" Margin="2" ItemsSource="{Binding Path=DownloadFileTypes}" SelectedValue="{Binding Path=WebServiceAccount.DownloadFileType}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="9" Margin="2" FontWeight="Bold" Text="RemoteFileUploadDirectory:" />
-        <TextBox Grid.Column="1" Grid.Row="9" Margin="2" Text="{Binding Path=WebServiceAccount.RemoteFileUploadDirectory}" />
+                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Initial Page:" />
+                    <ComboBox Grid.Column="1" Grid.Row="6" Margin="2" ItemsSource="{Binding Path=InitialPages}" SelectedValue="{Binding Path=WebServiceAccount.InitialPage}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="10" Margin="2" FontWeight="Bold" Text="AlertEmailAddress:" />
-        <TextBox Grid.Column="1" Grid.Row="10" Margin="2" Text="{Binding Path=WebServiceAccount.AlertEmailAddress}" />
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Application Timeout Minutes:" />
+                    <TextBox Grid.Column="1" Grid.Row="7" Margin="2" Text="{Binding Path=WebServiceAccount.ApplicationTimeoutMinutes}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="11" Margin="2" FontWeight="Bold" Text="SaveUserNameLocal:" />
-        <CheckBox Grid.Column="1" Grid.Row="11" Margin="2" IsChecked="{Binding Path=WebServiceAccount.SaveUserNameLocal}" />
+                    <TextBlock Grid.Column="0" Grid.Row="8" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Remote File Download Directory:" />
+                    <TextBox Grid.Column="1" Grid.Row="8" Margin="2" Text="{Binding Path=WebServiceAccount.RemoteFileDownloadDirectory}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="12" Margin="2" FontWeight="Bold" Text="SavePasswordLocal:" />
-        <CheckBox Grid.Column="1" Grid.Row="12" Margin="2" IsChecked="{Binding Path=WebServiceAccount.SavePasswordLocal}" />
+                    <TextBlock Grid.Column="0" Grid.Row="9" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Remote File Upload Directory:" />
+                    <TextBox Grid.Column="1" Grid.Row="9" Margin="2" Text="{Binding Path=WebServiceAccount.RemoteFileUploadDirectory}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="0" Margin="2" FontWeight="Bold" Text="EnableApplicationTimeout:" />
-        <CheckBox Grid.Column="3" Grid.Row="0" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableApplicationTimeout}" />
+                    <TextBlock Grid.Column="0" Grid.Row="10" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Alert Email Address:" />
+                    <TextBox Grid.Column="1" Grid.Row="10" Margin="2" Text="{Binding Path=WebServiceAccount.AlertEmailAddress}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="1" Margin="2" FontWeight="Bold" Text="EnableSaveSettings:" />
-        <CheckBox Grid.Column="3" Grid.Row="1" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableSaveSettings}" />
+                    <TextBlock Grid.Column="0" Grid.Row="11" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Save User Name Local:" />
+                    <CheckBox Grid.Column="1" Grid.Row="11" Margin="2" IsChecked="{Binding Path=WebServiceAccount.SaveUserNameLocal}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="2" Margin="2" FontWeight="Bold" Text="EnableFileUpload:" />
-        <CheckBox Grid.Column="3" Grid.Row="2" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableFileUpload}" />
+                    <TextBlock Grid.Column="0" Grid.Row="12" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Save Password Local:" />
+                    <CheckBox Grid.Column="1" Grid.Row="12" Margin="2" IsChecked="{Binding Path=WebServiceAccount.SavePasswordLocal}" />
+                </Grid>
+            </TabItem>
+            <TabItem Header="Web Service Account (Pg 2)">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Column="2" Grid.Row="3" Margin="2" FontWeight="Bold" Text="EnableFileDownload:" />
-        <CheckBox Grid.Column="3" Grid.Row="3" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableFileDownload}" />
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="2" Grid.Row="4" Margin="2" FontWeight="Bold" Text="EnableOrderEntry:" />
-        <CheckBox Grid.Column="3" Grid.Row="4" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableOrderEntry}" />
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Enable Application Timeout:" />
+                    <CheckBox Grid.Column="1" Grid.Row="0" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableApplicationTimeout}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="5" Margin="2" FontWeight="Bold" Text="EnableReportBrowser:" />
-        <CheckBox Grid.Column="3" Grid.Row="5" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableReportBrowser}" />
+                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Enable Save Settings:" />
+                    <CheckBox Grid.Column="1" Grid.Row="1" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableSaveSettings}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="6" Margin="2" FontWeight="Bold" Text="EnableBillingBrowser:" />
-        <CheckBox Grid.Column="3" Grid.Row="6" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableBillingBrowser}" />
+                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Enable File Upload:" />
+                    <CheckBox Grid.Column="1" Grid.Row="2" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableFileUpload}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="7" Margin="2" FontWeight="Bold" Text="EnableEmailAlert:" />
-        <CheckBox Grid.Column="3" Grid.Row="7" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableEmailAlert}" />
+                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Enable File Download:" />
+                    <CheckBox Grid.Column="1" Grid.Row="3" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableFileDownload}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="8" Margin="2" FontWeight="Bold" Text="VersionCurrentlyUsing:" />
-        <TextBox Grid.Column="3" Grid.Row="8" Margin="2" Text="{Binding Path=WebServiceAccount.VersionCurrentlyUsing}" />
+                    <TextBlock Grid.Column="0" Grid.Row="4" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Enable Order Entry:" />
+                    <CheckBox Grid.Column="1" Grid.Row="4" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableOrderEntry}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="9" Margin="2" FontWeight="Bold" Text="SystemUserId:" />
-        <TextBox Grid.Column="3" Grid.Row="9" Margin="2" Text="{Binding Path=WebServiceAccount.SystemUserId}" />
+                    <TextBlock Grid.Column="0" Grid.Row="5" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Enable Report Browser:" />
+                    <CheckBox Grid.Column="1" Grid.Row="5" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableReportBrowser}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="10" Margin="2" FontWeight="Bold" Text="Signature:" />
-        <TextBox Grid.Column="3" Grid.Row="10" Margin="2" Text="{Binding Path=WebServiceAccount.Signature}" />
+                    <TextBlock Grid.Column="0" Grid.Row="6" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Enable Billing Browser:" />
+                    <CheckBox Grid.Column="1" Grid.Row="6" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableBillingBrowser}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="11" Margin="2" FontWeight="Bold" Text="FacilityId:" />
-        <TextBox Grid.Column="3" Grid.Row="11" Margin="2" Text="{Binding Path=WebServiceAccount.FacilityId}" />
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Enable Email Alert:" />
+                    <CheckBox Grid.Column="1" Grid.Row="7" Margin="2" IsChecked="{Binding Path=WebServiceAccount.EnableEmailAlert}" />
 
-        <TextBlock Grid.Column="2" Grid.Row="12" Margin="2" FontWeight="Bold" Text="ObjectId:" />
-        <TextBox Grid.Column="3" Grid.Row="12" Margin="2" Text="{Binding Path=WebServiceAccount.ObjectId}" />
+                    <TextBlock Grid.Column="0" Grid.Row="8" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Version Currently Using:" />
+                    <TextBox Grid.Column="1" Grid.Row="8" Margin="2" Text="{Binding Path=WebServiceAccount.VersionCurrentlyUsing}" />
 
-        <Button Name="ButtonOK" Grid.Column="3" Grid.Row="13" Margin="2" Height="30" Width="80" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
+                    <TextBlock Grid.Column="0" Grid.Row="9" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="System User Id:" />
+                    <TextBox Grid.Column="1" Grid.Row="9" Margin="2" Text="{Binding Path=WebServiceAccount.SystemUserId}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="10" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Signature:" />
+                    <TextBox Grid.Column="1" Grid.Row="10" Margin="2" Text="{Binding Path=WebServiceAccount.Signature}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="11" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Facility Id:" />
+                    <TextBox Grid.Column="1" Grid.Row="11" Margin="2" Text="{Binding Path=WebServiceAccount.FacilityId}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="12" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Object Id:" />
+                    <TextBlock Grid.Column="1" Grid.Row="12" Margin="2" Text="{Binding Path=WebServiceAccount.ObjectId}" />
+                </Grid>
+            </TabItem>
+            <TabItem Header="Web Service Account Client">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Web Service Account Client Id:" />
+                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2" Text="{Binding Path=WebServiceAccountClient.WebServiceAccountClientId}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="1" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Web Service Account Id:" />
+                    <TextBox Grid.Column="1" Grid.Row="1" Margin="2" Text="{Binding Path=WebServiceAccountClient.WebServiceAccountId}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="2" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Client Id:" />
+                    <TextBox Grid.Column="1" Grid.Row="2" Margin="2" Text="{Binding Path=WebServiceAccountClient.ClientId}" />
+
+                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2" FontWeight="Bold" HorizontalAlignment="Right" Text="Object Id:" />
+                    <TextBox Grid.Column="1" Grid.Row="3" Margin="2" Text="{Binding Path=WebServiceAccountClient.ObjectId}" />
+                </Grid>
+            </TabItem>
+        </TabControl>
+
+        <Button Name="ButtonOK" Grid.Column="1" Grid.Row="14" Margin="2" Height="30" Width="80" HorizontalAlignment="Right" Click="ButtonOK_Click">OK</Button>
+
     </Grid>
 </Window>
